--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,46 @@
-musesl mne numpy scipy matplotlib pandas
+bitarray==3.8.0
+bitstring==4.3.1
+bleak==1.1.1
+certifi==2025.10.5
+charset-normalizer==3.4.4
+contourpy==1.3.3
+cycler==0.12.1
+decorator==5.2.1
+enum-compat==0.0.3
+fonttools==4.60.1
+idna==3.11
+Jinja2==3.1.6
+joblib==1.5.2
+kiwisolver==1.4.9
+lazy_loader==0.4
+MarkupSafe==3.0.3
+matplotlib==3.10.7
+mne==1.10.2
+muselsl==2.3.1
+numpy==2.3.4
+packaging==25.0
+pandas==2.3.3
+pexpect==4.9.0
+pillow==12.0.0
+platformdirs==4.5.0
+pooch==1.8.2
+ptyprocess==0.7.0
+pygatt==5.0.0
+pylsl==1.17.6
+pyobjc-core==12.0
+pyobjc-framework-Cocoa==12.0
+pyobjc-framework-CoreBluetooth==12.0
+pyobjc-framework-libdispatch==12.0
+pyparsing==3.2.5
+pyserial==3.5
+python-dateutil==2.9.0.post0
+pytz==2025.2
+requests==2.32.5
+scikit-learn==1.7.2
+scipy==1.16.3
+seaborn==0.13.2
+six==1.17.0
+threadpoolctl==3.6.0
+tqdm==4.67.1
+tzdata==2025.2
+urllib3==2.5.0
